--- a/mission/index.html
+++ b/mission/index.html
@@ -7,9 +7,13 @@
     <title>Document</title>
     <script src="java.js" defer></script>
 </head>
-<body>
+<body id="body">
     <h1>Mission Statement</h1>
     <h2>Brigham Young University-Idaho</h2>
+    <select name="mode" id="mode">
+      <option value="light">Light</option>
+      <option value="dark">Dark</option>
+    </select>
     <p>Brigham Young University-Idaho was founded and is supported and guided by The Church of Jesus Christ of Latter-day Saints. Its mission is to develop disciples of Jesus Christ who are leaders in their homes, the Church, and their communities.
     </p>
     <p1>
@@ -21,8 +25,6 @@
         <li>Serving as many students as possible within resource constraints.</li>
         <li>Delivering education that is affordable for students and the Church.</li>
     </ol>
-    <div>
-        <img src="byui-logo_blue.webp" width="150px" alt="logo">
-    </div>
+    <img id="img" src="byui-logo_blue.webp" width="150px" alt="logo">
 </body>
 </html>
