--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Cool Pics 📷</h1>
-        <p>Menu</p>
+        <button class="menu-button">Menu</button>
         <nav>
             <a href="index.html">Home</a>
             <a href="index.html">People</a>
@@ -50,6 +50,9 @@
                 <img src="norris-sm.jpeg" alt="picture">
             </figure>
         </section>
+        <dialog>
+            <img><button class="close-viewer">X</button>
+        </dialog>
     </main>
     <footer>
         @2023 Not a real site 😀
