--- a/zPuttingItAllTogether/index.html
+++ b/zPuttingItAllTogether/index.html
@@ -19,11 +19,12 @@
                 <p1>- Genesis 1:31</p1>
             </section>
         </a>
-        <!-- <a href="page2.html"> -->
-            <section>
-                <img src="Screenshot 2025-05-05 at 4.11.31 PM.png" height="210px" width="250px" alt="Blank Place Holder Img">
-                <h2>[Title Of The Topic]</h2>
-                <p>[Scripture Or Quote About The Topic]</p>
+        <a href="page2.html">
+            <section class="done">
+                <img src="Screenshot 2025-06-02 at 8.43.48 AM.png" height="210px" width="250px" alt="Blank Place Holder Img">
+                <h2>Missionary Work</h2>
+                <p>"Invite others to come unto Christ by helping them receive the restored gospel through faith in Jesus Christ and His Atonement, repentance, baptism, receiving the gift of the Holy Ghost, and enduring to the end"</p>
+                <p1>- Preach My Gospel</p1>
             </section>
         </a>
         <!-- <a href="page3.html"> -->
@@ -31,6 +32,7 @@
                 <img src="Screenshot 2025-05-05 at 4.11.31 PM.png" height="210px" width="250px" alt="Blank Place Holder Img">
                 <h2>[Title Of The Topic]</h2>
                 <p>[Scripture Or Quote About The Topic]</p>
+                <p1>[Referance]</p1>
             </section>
         </a>
     </main>
