--- a/zPuttingItAllTogether/index.html
+++ b/zPuttingItAllTogether/index.html
@@ -27,12 +27,12 @@
                 <p1>- Preach My Gospel</p1>
             </section>
         </a>
-        <!-- <a href="page3.html"> -->
-            <section>
-                <img src="Screenshot 2025-05-05 at 4.11.31 PM.png" height="210px" width="250px" alt="Blank Place Holder Img">
-                <h2>[Title Of The Topic]</h2>
-                <p>[Scripture Or Quote About The Topic]</p>
-                <p1>[Referance]</p1>
+        <a href="page3.html">
+            <section class="done">
+                <img src="https://www.churchofjesuschrist.org/imgs/e32f5821c733134b9c72a16e0ef6617ace5d9d6f/full/3840%2C/0/default" height="210px" width="250px" alt="Blank Place Holder Img">
+                <h2>The Atonement</h2>
+                <p>"For, behold, the Lord your Redeemer suffered death in the flesh; wherefore he suffered the pain of all men, that all men might repent and come unto him."</p>
+                <p1>- D&C 18:11</p1>
             </section>
         </a>
     </main>
