--- a/Week9/recipes/index.html
+++ b/Week9/recipes/index.html
@@ -14,15 +14,20 @@
             <h1>RecipeBook</h1>
         </div>
         <div class="search">
-            <input type="text" placeholder="Find a recipe">
+            <form id="search-form">
+                <input type="text" id="search-input" placeholder="Search recipes..." />
+                <button type="submit">Search</button>
+            </form>
         </div>
+        <div id="recipe-container"></div>
+        
     </header>
-    <main>
+    <!-- <main>
         <div class="recipe">
             <img class="image" src="#" alt="#" width="400px">
             <p><span id="tags"></span></p>
             <p><span id="name"></span></p>
-            <!-- <p><span id="description"></span></p> -->
+            <p><span id="description"></span></p>
         <span id="stars"
 	        class="rating"
 	        role="img"
@@ -34,7 +39,7 @@
 	        <span aria-hidden="true" class="icon-star-empty">☆</span>
         </span>
         </div>
-    </main>
+    </main> -->
     <footer>
         <div class="social">
             <!-- Social media icons provided under CC from https://www.iconfinder.com/AlfredoCreates  -->
